--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -234,10 +234,11 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/favorites_list"
                 android:layout_width="match_parent"
-                android:layout_height="550dp"
+                android:layout_height="500dp"
                 android:scrollbars="vertical"
                 app:layout_constraintTop_toBottomOf="@id/favorites_title"
                 tools:itemCount="10"
+                tools:layout_editor_absoluteX="40dp"
                 tools:listitem="@layout/item_layout" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
