--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -19,7 +19,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintBottom_toTopOf="@id/hr_line">
 
             <TextView
                 android:id="@+id/restaurant_name"
@@ -35,9 +35,8 @@
 
             <ImageView
                 android:id="@+id/restaurant_image"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="150dp"
                 android:src="@drawable/logo"
                 android:contentDescription="@string/img_desc"
                 app:layout_constraintTop_toBottomOf="@+id/restaurant_name"
@@ -47,21 +46,24 @@
 
             <ImageView
                 android:id="@+id/google_maps_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_marginVertical="20dp"
+                android:layout_marginRight="50dp"
+                android:layout_marginEnd="50dp"
                 android:contentDescription="@string/img_desc"
                 android:src="@android:drawable/ic_dialog_map"
-                app:tint="@color/black"
+                app:tint="#BB00BB"
                 app:layout_constraintTop_toBottomOf="@+id/restaurant_image"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@+id/favorite_btn"
-                app:layout_constraintBottom_toTopOf="@id/price_label" />
+                app:layout_constraintBottom_toTopOf="@id/price_label"
+                app:layout_constraintHorizontal_chainStyle="packed"/>
 
             <ImageView
                 android:id="@+id/favorite_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:contentDescription="@string/img_desc"
                 android:src="@android:drawable/btn_star_big_off"
                 app:layout_constraintBottom_toBottomOf="@id/google_maps_btn"
@@ -214,6 +216,80 @@
                 android:layout_marginHorizontal="30dp"
                 app:layout_constraintTop_toTopOf="@id/phone_label"
                 app:layout_constraintLeft_toRightOf="@id/phone_label"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/hr_line"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginVertical="20dp"
+            android:layout_marginHorizontal="20dp"
+            android:background="@android:color/darker_gray"
+            app:layout_constraintTop_toBottomOf="@id/default_data_section"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/image_section"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/image_section"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/hr_line"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <TextView
+                android:id="@+id/image_section_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/image_section_title"
+                android:layout_marginVertical="20dp"
+                android:textColor="@color/purple_500"
+                android:textSize="24sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/gallery_btn"/>
+
+            <ImageView
+                android:id="@+id/gallery_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="50dp"
+                android:layout_marginEnd="50dp"
+                android:contentDescription="@string/img_desc"
+                android:src="@drawable/add_image_from_gallery"
+                app:layout_constraintTop_toBottomOf="@id/image_section_title"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/camera_btn"
+                app:layout_constraintBottom_toTopOf="@+id/image_list"
+                app:layout_constraintHorizontal_chainStyle="packed"/>
+
+            <ImageView
+                android:id="@+id/camera_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/img_desc"
+                android:src="@drawable/create_image_by_camera"
+                app:layout_constraintBottom_toBottomOf="@id/gallery_btn"
+                app:layout_constraintLeft_toRightOf="@id/gallery_btn"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/gallery_btn" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/image_list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:minHeight="100dp"
+                app:layout_constraintTop_toBottomOf="@+id/gallery_btn"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:itemCount="10"
+                tools:listitem="@layout/image_layout"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
