--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -207,7 +207,7 @@
                 android:text="@string/phone_label_text"
                 app:layout_constraintTop_toBottomOf="@+id/postal_code_label"
                 app:layout_constraintRight_toRightOf="@+id/postal_code_label"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toTopOf="@+id/google_map_container"/>
 
             <TextView
                 android:id="@+id/phone_value"
@@ -229,6 +229,15 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintBottom_toBottomOf="@id/phone_value"
                 tools:targetApi="lollipop" />
+
+            <FrameLayout
+                android:visibility="gone"
+                android:id="@+id/google_map_container"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_margin="20dp"
+                app:layout_constraintTop_toBottomOf="@+id/phone_label"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -258,7 +267,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/image_section_title"
-                android:layout_marginVertical="20dp"
+                android:layout_marginBottom="20dp"
                 android:textColor="@color/purple_500"
                 android:textSize="24sp"
                 app:layout_constraintTop_toTopOf="parent"
